syntax = "proto3";

package patients.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/OPetricevic/physio-tracker/backend/golang/patients;patients";

message AuthToken {
  string uuid = 1;
  string doctor_uuid = 2;
  string token = 3;
  google.protobuf.Timestamp expires_at = 4;
  google.protobuf.Timestamp created_at = 5;
}
