syntax = "proto3";

package patients.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/OPetricevic/physio-tracker/backend/golang/patients;patients";

message DoctorCredentials {
  string uuid = 1;
  string doctor_uuid = 2;
  string password_hash = 3;
  google.protobuf.Timestamp password_updated_at = 4;
}
